[package]
name = "simple-bind"
version = "0.1.5"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
description = "One-line non-exhaustive binds"
license = "Apache-2.0"
repository = "https://github.com/willcrichton/simple-bind"
documentation = "https://docs.rs/simple-bind"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.2", features = ["nightly"] }
syn = {version = "0.12", features = ["full", "extra-traits"]}
quote = "0.4"